# kusa.wm

./: .gitignore  Cargo.toml  preview.sh
src/: keybindings.rs  main.rs  window_manager.rs
src/keybindings/: mod.rs
