[package]
name = "kusa-wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 

x11 = "2"
xcb = { version = "1", features = ["xkb"] }

[dependencies.tokio]
version = "1.34"
features = ["full"]
